# YoloPreview

./: LICENSE  README.md  main.py  pyproject.toml
detection/: onnx_strategy.py  strategy_base.py  strategy_factory.py  torch_strategy.py  yolo_onnx.py
ui/: coco_dataset_viewer_widget.py  main_window.py  yolo_dataset_viewer_widget.py  yolo_detection_widget.py
ui/components/: image_dispaly.py  message_box.py
utils/: paint.py
