[project]
name = "yolopreview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.11.0.86",
    "pyqt6>=6.9.1",
    "ultralytics>=8.3.163",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
